--- a/08디자인실습/실습3/melone.css
+++ b/08디자인실습/실습3/melone.css
@@ -3,7 +3,7 @@ a {text-decoration: none;}
 img {max-width: 100%; height: auto;}
 
 #header {border-top: 3px solid #00d344;}
-#header .wrap {border-bottom: 1px solid #999;}
+#header .wrap {border-bottom: 1px solid #999; overflow: hidden;}
 #header .wrap .top {margin: 0 auto; width: 1008px; overflow: hidden;}
 #header .wrap .top .top_left {float: left; padding: 11px 7px;}
 #header .wrap .top .top_right {float: right;}
@@ -66,7 +66,8 @@ img {max-width: 100%; height: auto;}
     text-align: center;
 }
 
-/**************************section**************************/
+/* **********section**********
+******************************/
 #section .wrap {
     width: 1008px;
     margin: 0 auto;
@@ -85,48 +86,47 @@ img {max-width: 100%; height: auto;}
     height: 159px; 
     /* border: 1px solid #777; */
     box-sizing: border-box;
-    position:relative;
+    position: relative;
 }
-
-#section .conts .list_wrap ul li a{
-    position:relative;
+#section .conts .list_wrap ul li a {
+    position: relative;
 }
-#section .conts .list_wrap ul li .singer{
-    position:absolute;
-    bottom:4px;
-    left:0;
-    width:100%;
-    height:22px;
-    line-height:22px;
+#section .conts .list_wrap ul li .singer {
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    width: 100%;
     background-color: #000;
-    color: white;
+    color: #fff;
     text-align: center;
-    font-size: 14px;
+    height: 22px;
+    line-height: 22px;
+    font-size: 13px;
 }
 
-#section .conts .list_wrap ul li .hover_cont{
+#section .conts .list_wrap ul li .hover_cont {
     position: absolute;
     left: 0;
     top: 0;
-    width:156px;
-    height:156px;
-    background-color: rgb(0,0,0,0.7);
-    color:white;
+    width: 156px; 
+    height: 156px;
+    background-color: rgb(0,0,0 , 0.7);
+    color: #fff;
     text-align: center;
     opacity: 0; /* 투명도 0 */
-    transition: opacity 0.25s ease-in-out; /* 애니메이션: 속성 / 초 단위 / 작동방법*/
+    transition: opacity 0.25s ease-in-out;
 }
-
-#section .conts .list_wrap ul li:hover > .hover_cont{
+#section .conts .list_wrap ul li:hover > .hover_cont {
     opacity: 1;
 }
 
-#section .conts .list_wrap ul li .hover_cont a{
+
+#section .conts .list_wrap ul li .hover_cont a {
     margin-top: 55px;
     display: block;
-    color: white;
-    font-weight: 500;
-    font-size: 15px;
+    color: #fff;
+    font-weight: 900;
+    font-size: 12px;
 }
 
 #section .user_wrap .login_wrap {
@@ -134,7 +134,6 @@ img {max-width: 100%; height: auto;}
     height: 118px;
     margin-bottom: 8px; 
     padding: 0 15px;
-    
 }
 #section .user_wrap .promo_wrap {
 /*     border: 1px solid #777; 
@@ -155,29 +154,53 @@ img {max-width: 100%; height: auto;}
     margin-top: 10px;
 }
 
-/***************************** footer ********************************/
+#section .wrap .hot_issue {
+    width: 708px;
+    float: left;
+    margin-top: 20px;
+}
+#section .wrap .hot_issue h3 {
+    border-bottom: 1px solid #777;
+    padding: 5px 0;
+}
+#section .wrap .hot_issue h3 span {
+    font-size: 15px;
+    color: #999;
+}
 
-#footer .popular{
-    width:860px;
+#section .wrap .hot_issue .issue {
     overflow: hidden;
-    margin: 0 auto;
-    border-bottom:1px solid #555;
 }
 
-#footer .popular .title{
-    float:left;
-    font-weight:700;
-    font-size: 18px;
-    padding-top:10px;
+#section .wrap .hot_issue .issue li {
+    float: left;
+    width: 225px;
+    margin: 16px 0 0 16px;
+}
+#section .wrap .hot_issue .issue li.m0 {
+    margin-left: 0;
+}
+#section .wrap .hot_issue .issue .inner > a > span {display: block;}
+#section .wrap .hot_issue .issue .inner .title {font-size: 15px; color: #000;}
+#section .wrap .hot_issue .issue .inner .cont {font-size: 11px; color:#999;}
+#section .wrap .hot_issue .issue .inner .hit {font-size: 11px; color:#00d344;}
+#section .wrap .hot_issue .issue .inner .hit span {margin-left: 5px; color:#999;}
+
+
+
+
+
+
+#section .wrap .chart {
+    width: 280px;
+    float: left;
 }
 
 
-#footer .popular .sub{
-    float:left;
-    padding-left:12px;
-    padding-top:18px;
-    font-size: 13px;
-}
+
+
+
+
 
 
 
